--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -15,7 +15,7 @@
   --bg-secondary-buttons-pressed: #586fb4;
   --bg-primary-input: #FEFEFE;
   --text-primary-input: #3c5293;
-  --text-error: #c93f21;
+  --text-error: #dc3713;
   --text-success: #4CAF50;
   --border-radius: 8px;
 }
