--- a/src/shared/ui/input/styles.scss
+++ b/src/shared/ui/input/styles.scss
@@ -1,59 +1,59 @@
-input::-webkit-input-placeholder {
-  color: var(--text-primary-input);
-}
-
 .field {
+  color: var(--text-primary-input);
 
-  &:focus {
-    .placeholder {
-      display: block;
-      font-size: 12px;
-      line-height: 18px;
-      font-weight: 400;
-    }
+  &.error {
+    color: var(--text-error) !important;
+    margin-top: 8px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
   }
 
-  .placeholder {
-    display: none;
+  .label {
+    display: block;
+    position: absolute;
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: 400;
+    margin: 16px 24px;
   }
 
   .input {
     border-radius: var(--border-radius);
     padding: 16px 24px;
-    display: flex;
-    gap: 10px;
-
-
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+    background: var(--bg-primary-input);
     transition: background ease 0.5ms;
+
+    &.with-label {
+      padding-top: 32px !important;
+    }
 
     &::-webkit-input-placeholder {
       color: var(--text-primary-input);
-    }
-
-    &.error {
-      &::-webkit-input-placeholder {
-        color: var(--text-error)!important;
-      }
-      color: var(--text-error)!important;
-      box-shadow: inset 0 0 0 1px var(--text-error)!important;
     }
 
     &:hover, &:active, &.active {
       box-shadow: inset 0 0 0 1px var(--text-primary-input);
     }
 
+    &.error {
+      &::-webkit-input-placeholder {
+        color: var(--text-error) !important;
+      }
+
+      color: var(--text-error) !important;
+      box-shadow: inset 0 0 0 1px var(--text-error) !important;
+    }
+
     &.large {
-      font-size: 24px;
-      line-height: 36px;
-      font-weight: 500;
       height: 72px;
       width: 580px;
     }
 
     &.medium {
-      font-size: 16px;
-      line-height: 24px;
-      font-weight: 500;
       height: 56px;
       width: 280px;
     }
