--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -6,6 +6,7 @@
   --text-buttons-disable: #414650;
   --bg-primary: #FEFEFE;
   --bg-secondary: #2B3E78;
+  --bg-tertiary: #33457c; // нижняя часть футера
   --bg-primary-buttons: #FEFEFE;
   --bg-secondary-buttons: #2B3E78;
   --bg-buttons-disable: #babec5;
@@ -13,7 +14,8 @@
   --bg-primary-buttons-pressed: #d9e7ff;
   --bg-secondary-buttons-hover: #3c5293;
   --bg-secondary-buttons-pressed: #586fb4;
-  --bg-primary-input: #FEFEFE;
+  --bg-primary-input: #F3F4F8;
+  --text-action: #1640de; // ссылки, акценты
   --text-primary-input: #3c5293;
   --text-error: #dc3713;
   --text-success: #4CAF50;
