--- a/src/shared/ui/link/styles.scss
+++ b/src/shared/ui/link/styles.scss
@@ -1,19 +1,4 @@
 .link {
-  transition: text-decoration ease 0.5ms;
-
-  &:hover {
-    text-decoration: underline;
-  }
-
-  &.small {
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 400;
-  }
-
-  &.medium {
-    font-size: 20px;
-    line-height: 36px;
-    font-weight: 400;
-  }
+  color: var(--text-action)!important;
+  text-decoration: underline!important;
 }
