feat: добавлен Container

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,6 +1,7 @@
 :root {
   --text-primary: #2B3E78;
   --text-secondary: #FEFEFE;
+  --text-tertiary: #FEFEFE;
   --text-primary-buttons: #2B3E78;
   --text-secondary-buttons: #FEFEFE;
   --text-buttons-disable: #414650;
