feat: добавлен PasswordInput и несколько иконок, изменен Input

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -18,7 +18,7 @@
   --bg-primary-input: #F3F4F8;
   --text-action: #1640de; // ссылки, акценты
   --text-primary-input: #3c5293;
-  --text-error: #dc3713;
+  --text-error: #F53C14;
   --text-success: #4CAF50;
   --border-radius: 8px;
 }
