--- a/src/shared/ui/button/styles.scss
+++ b/src/shared/ui/button/styles.scss
@@ -1,6 +1,7 @@
 .button {
   border-radius: var(--border-radius);
   padding: 12px 24px;
+  max-width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
