--- a/src/shared/ui/input/styles.scss
+++ b/src/shared/ui/input/styles.scss
@@ -1,12 +1,39 @@
 .field {
+  position: relative;
+  padding: 16px 24px;
+  max-width: 100%;
   color: var(--text-primary-input);
+  background: var(--bg-primary-input);
+  border-radius: var(--border-radius);
+  transition: background ease 0.5ms;
+
+  &:hover, &:active, &.active {
+    box-shadow: inset 0 0 0 1px var(--text-primary-input);
+  }
 
   &.error {
     color: var(--text-error) !important;
-    margin-top: 8px;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 18px;
+    box-shadow: inset 0 0 0 1px var(--text-error) !important;
+    margin-bottom: 26px;
+  }
+
+  &.large {
+    height: 72px;
+    width: 580px;
+  }
+
+  &.medium {
+    height: 56px;
+    width: 280px;
+  }
+
+  &.small {
+    height: 72px;
+    width: 72px;
+  }
+
+  &.max {
+    width: 100%;
   }
 
   .label {
@@ -15,51 +42,40 @@
     font-size: 12px;
     line-height: 18px;
     font-weight: 400;
-    margin: 16px 24px;
   }
 
   .input {
-    border-radius: var(--border-radius);
-    padding: 16px 24px;
-    font-size: 16px;
-    line-height: 24px;
     font-weight: 500;
-    background: var(--bg-primary-input);
-    transition: background ease 0.5ms;
+    width: 100%;
+    height: 100%;
 
     &.with-label {
-      padding-top: 32px !important;
+      padding-top: 14px !important;
     }
 
     &::-webkit-input-placeholder {
       color: var(--text-primary-input);
     }
 
-    &:hover, &:active, &.active {
-      box-shadow: inset 0 0 0 1px var(--text-primary-input);
-    }
-
     &.error {
       &::-webkit-input-placeholder {
         color: var(--text-error) !important;
       }
-
-      color: var(--text-error) !important;
-      box-shadow: inset 0 0 0 1px var(--text-error) !important;
     }
+  }
 
-    &.large {
-      height: 72px;
-      width: 580px;
-    }
+  .input-icon {
+    position: absolute;
+    top: 24px;
+    right: 16px;
+  }
 
-    &.medium {
-      height: 56px;
-      width: 280px;
-    }
-
-    &.max {
-      width: 100%;
-    }
+  .error-text {
+    position: absolute;
+    top: 80px;
+    left: 0;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
   }
 }
