feat: update link

--- a/src/shared/ui/link/styles.scss
+++ b/src/shared/ui/link/styles.scss
@@ -2,3 +2,11 @@
   color: var(--text-action)!important;
   text-decoration: underline!important;
 }
+.none{
+  color: white;
+  text-decoration: none;
+}
+.medium{
+    font-size: 20px;
+    line-height: 36px;
+  }
