--- a/src/shared/ui/input/styles.scss
+++ b/src/shared/ui/input/styles.scss
@@ -5,7 +5,7 @@
   color: var(--text-primary-input);
   background: var(--bg-primary-input);
   border-radius: var(--border-radius);
-  transition: background ease 0.5ms;
+  transition: background ease .5s;
 
   &:hover, &:active, &.active {
     box-shadow: inset 0 0 0 1px var(--text-primary-input);
