--- a/src/shared/ui/container/styles.scss
+++ b/src/shared/ui/container/styles.scss
@@ -20,9 +20,27 @@
     }
   }
 
+  @media screen and (min-width: 600px) and (max-width: 900px) {
+    .container {
+      padding: 0 30px !important;
+    }
+  }
+
+  @media screen and (min-width: 900px) and (max-width: 1000px) {
+    .container {
+      padding: 0 70px !important;
+    }
+  }
+
+  @media screen and (min-width: 1000px) and (max-width: 1200px) {
+    .container {
+      padding: 0 100px !important;
+    }
+  }
+
   .container {
     margin: 0 auto;
-    padding: 0 32px;
+    padding: 0 130px;
   }
 }
 
