--- a/src/shared/ui/link/styles.scss
+++ b/src/shared/ui/link/styles.scss
@@ -1,12 +1,4 @@
-.link {
+.action {
   color: var(--text-action)!important;
   text-decoration: underline!important;
 }
-.none{
-  color: white;
-  text-decoration: none;
-}
-.medium{
-    font-size: 20px;
-    line-height: 36px;
-  }
