--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -48,15 +48,21 @@ input, textarea, button, select, input:-webkit-autofill {
   background-color: transparent;
 }
 
-input:-webkit-autofill,
-input:-webkit-autofill:focus {
-  transition: background-color 0s 600000s, color 0s 600000s !important;
-}
-
 input {
   &::-ms-clear {
     display: none;
   }
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+  -webkit-appearance: textfield;
+  appearance: textfield;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  display: none;
 }
 
 button, input[type="submit"] {
