--- a/src/shared/ui/input/styles.scss
+++ b/src/shared/ui/input/styles.scss
@@ -1,81 +1,109 @@
 .field {
-  position: relative;
-  padding: 16px 24px;
   max-width: 100%;
   color: var(--text-primary-input);
-  background: var(--bg-primary-input);
-  border-radius: var(--border-radius);
-  transition: background ease .5s;
-
-  &:hover, &:active, &.active {
-    box-shadow: inset 0 0 0 1px var(--text-primary-input);
-  }
 
   &.error {
-    color: var(--text-error) !important;
-    box-shadow: inset 0 0 0 1px var(--text-error) !important;
-    margin-bottom: 26px;
+    color: var(--text-error)!important;
   }
 
   &.large {
-    height: 72px;
     width: 580px;
   }
 
   &.medium {
-    height: 56px;
     width: 280px;
   }
 
-  &.small {
-    height: 72px;
-    width: 72px;
-  }
-
-  &.max {
-    width: 100%;
-  }
-
-  .label {
-    display: block;
-    position: absolute;
-    font-size: 12px;
-    line-height: 18px;
-    font-weight: 400;
-  }
-
   .input {
-    font-weight: 500;
-    width: 100%;
-    height: 100%;
+    position: relative;
+    padding: 16px 24px;
+    background: var(--bg-primary-input);
+    border-radius: var(--border-radius);
+    transition: box-shadow ease .5s;
 
-    &.with-label {
-      padding-top: 14px !important;
-    }
-
-    &::-webkit-input-placeholder {
-      color: var(--text-primary-input);
+    &:hover, &:focus, &:active, &.active {
+      box-shadow: inset 0 0 0 1px var(--text-primary-input);
     }
 
     &.error {
-      &::-webkit-input-placeholder {
-        color: var(--text-error) !important;
+      box-shadow: inset 0 0 0 1px var(--text-error) !important;
+    }
+
+    &.large {
+      height: 72px;
+    }
+
+    &.medium {
+      height: 56px;
+    }
+
+    &.small {
+      height: 72px;
+      width: 72px;
+      padding: 16px!important;
+
+      input {
+        text-align: center;
       }
+
+      @media screen and (min-width: 600px) {
+        input {
+          font-size: 24px;
+          line-height: 36px;
+        }
+      }
+    }
+
+    &.max {
+      width: 100%;
+    }
+
+    .label {
+      display: block;
+      position: absolute;
+      font-size: 12px;
+      line-height: 18px;
+      font-weight: 400;
+    }
+
+    input {
+      font-weight: 500;
+      width: 100%;
+      height: 100%;
+
+      &.with-label {
+        padding-top: 14px !important;
+      }
+
+      &:-webkit-autofill,
+      &:-webkit-autofill:focus {
+        -webkit-text-fill-color: var(--text-primary-input);
+        -webkit-box-shadow: 0 0 0 1000px var(--bg-primary-input) inset;
+      }
+
+      &::-webkit-input-placeholder {
+        color: var(--text-primary-input);
+      }
+
+      &.error {
+        &::-webkit-input-placeholder {
+          color: var(--text-error) !important;
+        }
+      }
+    }
+
+    .input-icon {
+      position: absolute;
+      top: 24px;
+      right: 24px;
     }
   }
 
-  .input-icon {
-    position: absolute;
-    top: 24px;
-    right: 24px;
-  }
-
-  .error-text {
-    position: absolute;
-    top: 80px;
-    left: 0;
+  .input-error {
+    margin-top: 8px;
     font-size: 12px;
-    font-weight: 400;
     line-height: 18px;
+    font-weight: 400;
   }
 }
+
