--- a/src/widgets/header/ui/navigation/styles.scss
+++ b/src/widgets/header/ui/navigation/styles.scss
@@ -2,5 +2,10 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    gap: 32px;
+    justify-content: space-between;
+    width: 100%;
+    ul{
+        display: flex;
+        gap: 32px;
+    }
 }
