feat: agel-947 добавлена базовая версия MultiStepForm, добавлено BackButton и FormCard

--- a/src/shared/ui/text/styles.scss
+++ b/src/shared/ui/text/styles.scss
@@ -35,4 +35,16 @@
   &.bold {
     font-weight: 700;
   }
+
+  &.center {
+    text-align: center;
+  }
+
+  &.left {
+    text-align: left;
+  }
+
+  &.right {
+    text-align: right;
+  }
 }
