feat: agel-946 добавил недостающий отступ для навигации

--- a/src/widgets/header/ui/navigation/styles.scss
+++ b/src/widgets/header/ui/navigation/styles.scss
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    gap: 32px;
     ul{
         display: flex;
         gap: 32px;
