feat: agel-947 исправление маски для телефона и документа, добавление нового пропса для DocumentInput, DocumentInput, PhoneInput

--- a/src/features/inputs/code-input/styles.scss
+++ b/src/features/inputs/code-input/styles.scss
@@ -9,12 +9,13 @@
     gap: 10px;
   }
 
-  &__info {
+  &__error {
+    color: var(--text-error);
     margin-top: 8px;
   }
 
-  &__error {
-    color: var(--text-error);
+  &__info {
+    margin-top: 4px;
   }
 }
 
