feat: agel-947 добавлено отображение соответствия пароля установленным правилам

--- a/src/shared/ui/text/styles.scss
+++ b/src/shared/ui/text/styles.scss
@@ -47,4 +47,14 @@
   &.right {
     text-align: right;
   }
+  &.success{
+    color: var(--text-success);
+  }
+  &.inherit{
+    color: inherit;
+
+  }
+  &.error{
+    color: var(--text-error);
+  }
 }
