--- a/src/shared/ui/input/styles.scss
+++ b/src/shared/ui/input/styles.scss
@@ -81,6 +81,13 @@
         -webkit-box-shadow: 0 0 0 1000px var(--bg-primary-input) inset;
       }
 
+      &.error {
+        &:-webkit-autofill,
+        &:-webkit-autofill:focus {
+          -webkit-text-fill-color: var(--text-error);
+        }
+      }
+
       &::-webkit-input-placeholder {
         color: var(--text-primary-input);
       }
