--- a/src/shared/ui/input/styles.scss
+++ b/src/shared/ui/input/styles.scss
@@ -21,10 +21,10 @@
     border-radius: var(--border-radius);
     transition: box-shadow ease .5s;
 
-    &:hover, &.focus, &:active, &.active {
+    &:hover, &:focus-within, &:active, &.active {
       box-shadow: inset 0 0 0 1px var(--text-primary-input);
     }
-
+    
     &.error {
       box-shadow: inset 0 0 0 1px var(--text-error) !important;
     }
@@ -113,4 +113,5 @@
     font-weight: 400;
   }
 }
+
 
