--- a/src/features/inputs/password-input/info-card/styles.scss
+++ b/src/features/inputs/password-input/info-card/styles.scss
@@ -1,7 +1,7 @@
 .info_card{
     display: flex;
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     gap: 10px;
     height: 18px;
   }
