--- a/src/shared/ui/text/styles.scss
+++ b/src/shared/ui/text/styles.scss
@@ -47,14 +47,14 @@
   &.right {
     text-align: right;
   }
-  &.success{
+
+  &success{
     color: var(--text-success);
   }
-  &.inherit{
-    color: inherit;
-
-  }
-  &.error{
+  &error{
     color: var(--text-error);
+  }
+  &inherit{
+    color: inherit;
   }
 }
