fix: agel-949 исправлено корректно перекрытие стилей, скорректирована работа виджета ошибок при введении пароля

--- a/src/shared/ui/text/styles.scss
+++ b/src/shared/ui/text/styles.scss
@@ -48,13 +48,13 @@
     text-align: right;
   }
 
-  &success{
+  &.text-success{
     color: var(--text-success);
   }
-  &error{
+  &.text-error{
     color: var(--text-error);
   }
-  &inherit{
+  &.text-inherit{
     color: inherit;
   }
 }
