fix: agel-947 исправлены ошибки в работе phonenput

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -31,6 +31,8 @@ body {
   background: var(--bg-primary);
 }
 #root{
+  padding: 0;
+  margin: 0;
   height: 100vh;
   display: grid;
   grid-template-rows: 146px 1fr 390px;
