refactor: agel-947 добавлен параметр variant в PasswordInput, добавлена ссылка 'Забыли пароль?'

--- a/src/features/inputs/password-input/info-card/styles.scss
+++ b/src/features/inputs/password-input/info-card/styles.scss
@@ -1,7 +1,9 @@
-.info_card{
+.info_card {
     display: flex;
-    padding: 0;
-    margin: 0;
-    gap: 10px;
-    height: 18px;
+    gap: 8px;
+
+    div {
+        display: flex;
+        align-items: center;
+    }
   }
