feat: добавлены icons

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -8,6 +8,7 @@
   --bg-primary: #FEFEFE;
   --bg-secondary: #2B3E78;
   --bg-tertiary: #33457c; // нижняя часть футера
+  --bg-quadruple: #F3F4F8;
   --bg-primary-buttons: #FEFEFE;
   --bg-secondary-buttons: #2B3E78;
   --bg-buttons-disable: #babec5;
