feat: AGEL-992 добавлен Contacts

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -17,6 +17,7 @@
   --bg-secondary-buttons-hover: #3c5293;
   --bg-secondary-buttons-pressed: #586fb4;
   --bg-primary-input: #F3F4F8;
+  --bg-secondary-input: #FEFEFE;
   --text-action: #1640de; // ссылки, акценты
   --text-primary-input: #3c5293;
   --text-error: #F53C14;
