--- a/src/shared/ui/input/styles.scss
+++ b/src/shared/ui/input/styles.scss
@@ -14,12 +14,23 @@
     width: 280px;
   }
 
+  &.max {
+    width: 100%;
+  }
+
   .input {
     position: relative;
     padding: 16px 24px;
-    background: var(--bg-primary-input);
     border-radius: var(--border-radius);
     transition: box-shadow ease .5s;
+
+    &.primary {
+      background: var(--bg-primary-input);
+    }
+
+    &.secondary {
+      background: var(--bg-secondary-input);
+    }
 
     &:hover, &:focus-within, &:active, &.active {
       box-shadow: inset 0 0 0 1px var(--text-primary-input);
@@ -52,10 +63,6 @@
           line-height: 36px;
         }
       }
-    }
-
-    &.max {
-      width: 100%;
     }
 
     .label {
