--- a/src/shared/ui/input/styles.scss
+++ b/src/shared/ui/input/styles.scss
@@ -32,6 +32,10 @@
       background: var(--bg-secondary-input);
     }
 
+    &.disabled:hover {
+      box-shadow: none!important;
+    }
+
     &:hover, &:focus-within, &:active, &.active {
       box-shadow: inset 0 0 0 1px var(--text-primary-input);
     }
