feat: AGEL-992 добавлено Menu, PersonalPage

--- a/src/widgets/header/ui/navigation/styles.scss
+++ b/src/widgets/header/ui/navigation/styles.scss
@@ -5,8 +5,10 @@
     justify-content: space-between;
     width: 100%;
     gap: 32px;
+
     ul{
         display: flex;
+        flex-wrap: wrap;
         gap: 32px;
     }
 }
