--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -37,10 +37,5 @@ body {
   margin: 0;
   height: 100vh;
   display: grid;
-  grid-template-rows: 146px 1fr 390px;
-}
-main{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  grid-template-rows: auto 1fr auto;
 }
