--- a/src/entities/user/address/ui/styles.scss
+++ b/src/entities/user/address/ui/styles.scss
@@ -14,9 +14,10 @@
     flex-wrap: wrap;
     gap: 20px;
 
-    @media screen and (max-width: 1000px) {
+    @media screen and (max-width: 1100px) {
       > div {
         flex: 1 1 50%!important;
+        max-width: 100%!important;
       }
     }
 
