--- a/src/widgets/greeting/ui/styles.scss
+++ b/src/widgets/greeting/ui/styles.scss
@@ -1,9 +1,19 @@
-.greeting{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    gap: 24px;
-    padding: 50px 0;
+@media screen and (max-width: 500px) {
+    .greeting {
+        word-break: break-all;
+    }
+}
+
+.greeting {
+    margin: 50px 0;
+
+    .greeting__logo {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 24px;
+        padding-bottom: 50px;
+    }
 }
