--- a/src/features/inputs/password-input/styles.scss
+++ b/src/features/inputs/password-input/styles.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-
+  width: 100%;
+  min-width: 360px;
   .forgot-password-link {
     display: flex;
     justify-content: flex-end;
