--- a/src/pages/notification/ui/styles.scss
+++ b/src/pages/notification/ui/styles.scss
@@ -1,8 +1,20 @@
 .notifications {
+  width: 75vw;
+  padding-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
   &__list {
     margin-top: 15px;
   }
+
   &__item {
     margin-bottom: 15px;
+  }
+
+  &__link, &__link:link {
+    text-decoration: underline;
+    display: block;
   }
 }
