--- a/src/entities/user/address/ui/styles.scss
+++ b/src/entities/user/address/ui/styles.scss
@@ -1,15 +1,15 @@
-.address {
+.user-address {
   display: flex;
   flex-direction: column;
   gap: 16px;
 
-  .address_col {
+  .user-address__col {
     display: flex;
     flex-direction: column;
     gap: 8px;
   }
 
-  .address_inputs {
+  .user-address__inputs {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
