--- a/src/widgets/footer/ui/menu/styles.scss
+++ b/src/widgets/footer/ui/menu/styles.scss
@@ -3,6 +3,6 @@
     flex-wrap: wrap;
     align-items: center;
     gap: 32px;
-    padding-top: 24px;
+    padding: 18px 0;
     min-height: 60px;
 }
