--- a/src/shared/ui/text/styles.scss
+++ b/src/shared/ui/text/styles.scss
@@ -1,4 +1,8 @@
 .text {
+  &.xxs {
+    font-size: 12px;
+    line-height: 9px;
+  }
   &.xs {
     font-size: 12px;
     line-height: 18px;
@@ -35,7 +39,9 @@
   &.bold {
     font-weight: 700;
   }
-
+  &.extra-bold {
+    font-weight: 700;
+  }
   &.center {
     text-align: center;
   }
