refactor: AGEL-962 рефактор Menu и Accounts, декомпозиция

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,10 +3,11 @@
   --text-primary: #2B3E78;
   --text-secondary: #FEFEFE;
   --text-tertiary: #FEFEFE;
-  --text-primary-buttons: #2B3E78;
+  --text-quadruple: #3c5293;
+  --text-primary-buttons: #3c5293;
   --text-secondary-buttons: #FEFEFE;
   --text-buttons-disable: #414650;
-  --text-action: #1640de; // ссылки, акценты
+  --text-action: #1640de;
   --text-primary-input: #3c5293;
   --text-primary-day:#001A34;
   --text-error: #F53C14;
@@ -14,7 +15,7 @@
   //фоны
   --bg-primary: #FEFEFE;
   --bg-secondary: #2B3E78;
-  --bg-tertiary: #33457c; // нижняя часть футера
+  --bg-tertiary: #33457c;
   --bg-quadruple: #F3F4F8;
   --bg-primary-buttons: #FEFEFE;
   --bg-secondary-buttons: #2B3E78;
@@ -23,6 +24,7 @@
   --bg-primary-buttons-pressed: #d9e7ff;
   --bg-secondary-buttons-hover: #3c5293;
   --bg-secondary-buttons-pressed: #586fb4;
+  --bg-action: #1640de;
   --bg-success: #4CAF50;
   --bg-warning: #F6BE2C;
   --bg-error: #F53C14;
