--- a/src/shared/ui/link/styles.scss
+++ b/src/shared/ui/link/styles.scss
@@ -2,3 +2,7 @@
   color: var(--text-action)!important;
   text-decoration: underline!important;
 }
+
+.underline {
+  text-decoration: underline!important;
+}
