--- a/src/widgets/notifications/checkbox-group/styles.scss
+++ b/src/widgets/notifications/checkbox-group/styles.scss
@@ -1,7 +1,8 @@
-.notifications {
+.checkbox-group {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  margin-bottom: 20px;
 
   &__list {
     margin-top: 15px;
@@ -9,10 +10,5 @@
 
   &__item {
     margin-bottom: 15px;
-  }
-
-  &__link, &__link:link {
-    text-decoration: underline;
-    display: block;
   }
 }
