--- a/src/features/menu/styles.scss
+++ b/src/features/menu/styles.scss
@@ -1,22 +1,41 @@
 .menu {
   display: block;
-  .menu__items {
+
+  &__bar {
+    display: flex;
+    column-gap: 62px;
+    row-gap: 24px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    white-space: nowrap;
+  }
+
+  &__items {
     padding-top: 16px;
     min-height: 56px;
     display: flex;
-    gap: 24px;
+    column-gap: 24px;
+    row-gap: 8px;
+    flex-wrap: wrap;
+  }
 
-    .menu__item {
-      padding: 8px 0;
+  &__item {
+    padding: 8px 0;
 
-      &.active {
-        box-shadow: inset 0 -3px 0 0;
-      }
+    &.active {
+      box-shadow: inset 0 -3px 0 0;
+      color: var(--text-action);
     }
   }
 
-  .menu__content {
-    margin: 56px 0;
+  &__content {
+    &.primary {
+      margin: 56px 0;
+    }
+
+    &.secondary {
+      margin: 30px 0;
+    }
   }
 }
 
