feat: AGEL-793 добавлена страница информации о счете по US 4.2

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -8,6 +8,7 @@
   --text-secondary-buttons: #FEFEFE;
   --text-buttons-disable: #414650;
   --text-action: #1640de;
+  --text-copy: #4D5F71;
   --text-primary-input: #3c5293;
   --text-primary-day:#001A34;
   --text-error: #F53C14;
