--- a/src/widgets/main-menu/ui/styles.scss
+++ b/src/widgets/main-menu/ui/styles.scss
@@ -2,7 +2,7 @@
     @media screen and (min-width: 1300px)  {
         gap: 95px;
     }
-    @media screen and (min-width: 1100px)  {
+    @media screen and (min-width: 1100px) and (max-width: 1300px)  {
         gap: 70px;
     }
     @media screen and (max-width: 800px)  {
