--- a/src/shared/ui/text/styles.scss
+++ b/src/shared/ui/text/styles.scss
@@ -64,6 +64,14 @@
     color: var(--text-error);
   }
 
+  &.text-copy{
+    color: var(--text-copy);
+  }
+
+  &.text-primary-day{
+    color: var(--text-primary-day);
+  }
+
   &.text-inherit{
     color: inherit;
   }
