--- a/src/widgets/cards/ui/content/card/styles.scss
+++ b/src/widgets/cards/ui/content/card/styles.scss
@@ -17,4 +17,20 @@
     gap: 20px;
     margin-top: auto;
   }
+  @media screen and (max-width: 600px) {
+    &__container {
+      flex-direction: column;
+      align-items: center;
+    }
+    &__info {
+      width: 100%;
+      margin-left: 0;
+      margin-top: 10px;
+      text-align: center;
+    }
+    &__buttons {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
 }
