--- a/src/features/forms/change-password/styles.scss
+++ b/src/features/forms/change-password/styles.scss
@@ -4,3 +4,8 @@
     justify-content: space-between;
     gap: 20px;
 }
+@media screen and (max-width: 1100px) {
+        .row{
+        flex-direction: column;
+      }
+    }
