feat: AGEL-1054 изменено Menu, BackButton, добавлено MainRouteName, PersonalRouteName

--- a/src/features/multi-step-form/go-back/styles.scss
+++ b/src/features/multi-step-form/go-back/styles.scss
@@ -2,7 +2,10 @@
   color: var(--text-action);
   display: flex;
   gap: 4px;
-  margin-bottom: 32px;
+
+  &__top {
+    margin-top: 32px;
+  }
 }
 
 
