--- a/src/widgets/cards/ui/content/card/styles.scss
+++ b/src/widgets/cards/ui/content/card/styles.scss
@@ -5,18 +5,25 @@
     padding: 30px 20px;
     display: flex;
     border-radius: 8px;
+    position: relative;
   }
   &__info {
     display: flex;
     flex-direction: column;
     margin-left: 60px;
     gap: 10px;
+    width: 66%;
+  }
+  &__title {
+    display: flex;
+    justify-content: space-between;
   }
   &__buttons {
     display: flex;
     gap: 20px;
     margin-top: auto;
   }
+
   @media screen and (max-width: 600px) {
     &__container {
       flex-direction: column;
