--- a/src/widgets/cards/ui/content/filters/styles.scss
+++ b/src/widgets/cards/ui/content/filters/styles.scss
@@ -2,4 +2,8 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
+  @media screen and (max-width: 600px)  {
+    flex-direction: column;
+    gap: 10px;
+  }
 }
