--- a/src/shared/ui/text/styles.scss
+++ b/src/shared/ui/text/styles.scss
@@ -57,23 +57,19 @@
     text-align: right;
   }
 
-  &.text-success{
+  &.text-success {
     color: var(--text-success);
   }
 
-  &.text-error{
+  &.text-error {
     color: var(--text-error);
   }
 
-  &.text-copy{
-    color: var(--text-copy);
+  &.text-quadruple {
+    color: var(--text-quadruple);
   }
 
-  &.text-primary-day{
-    color: var(--text-primary-day);
-  }
-
-  &.text-inherit{
+  &.text-inherit {
     color: inherit;
   }
 }
