--- a/src/widgets/account-creation/ui/styles.scss
+++ b/src/widgets/account-creation/ui/styles.scss
@@ -6,7 +6,7 @@
             gap: 24px;
             flex-direction: column;
             justify-content: space-evenly;
-            padding: 5vh 10vw;
+            padding: 32px;
             &__variants{
                 display: flex;
                 justify-content: space-evenly;
@@ -41,7 +41,7 @@
             height: 62px;
             display: flex;
             flex-direction: column;
-            gap: 8px;
+            gap: 4px;
         }
         &__currency{
             border-radius: var(--border-radius);
@@ -50,7 +50,7 @@
             align-items: center;
             width:361px;
             height: 72px;
-            gap: 4px;
+            gap: 16px;
         }
     }
     &__result{
