--- a/src/widgets/cards/ui/content/card/styles.scss
+++ b/src/widgets/cards/ui/content/card/styles.scss
@@ -2,8 +2,10 @@
   &__container {
     background-color: var(--bg-primary-input);
     margin-bottom: 25px;
+    margin-top: 25px;
     padding: 30px 20px;
     display: flex;
+    justify-content: space-between;
     border-radius: 8px;
     position: relative;
   }
@@ -14,9 +16,17 @@
     gap: 10px;
     width: 66%;
   }
+  &__image {
+    width: 34%;
+  }
   &__title {
     display: flex;
     justify-content: space-between;
+  }
+  &__advantages {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
   }
   &__buttons {
     display: flex;
@@ -28,6 +38,9 @@
     &__container {
       flex-direction: column;
       align-items: center;
+    }
+    &__advantages {
+      justify-content: space-between;
     }
     &__info {
       width: 100%;
