--- a/src/features/forms/change-password/styles.scss
+++ b/src/features/forms/change-password/styles.scss
@@ -1,11 +1,9 @@
-.change-password__row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 20px;
+.change-password {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+
+  @media screen and (max-width: 1100px) {
+    flex-direction: column;
+  }
 }
-@media screen and (max-width: 1100px) {
-        .row{
-        flex-direction: column;
-      }
-    }
