--- a/src/shared/ui/input/styles.scss
+++ b/src/shared/ui/input/styles.scss
@@ -32,6 +32,10 @@
       background: var(--bg-secondary-input);
     }
 
+    &.disabled {
+      opacity: 0.8;
+    }
+
     &.disabled:hover {
       box-shadow: none!important;
     }
