--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -35,7 +35,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
-  line-height: 1.4;
+  line-height: 24px;
   color: var(--text-primary);
   background: var(--bg-primary);
 }
