--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -40,6 +40,25 @@ body {
   background: var(--bg-primary);
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--bg-primary);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--bg-quadruple);
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--bg-buttons-disable);
+}
+
 #root{
   padding: 0;
   margin: 0;
