--- a/src/shared/ui/button/styles.scss
+++ b/src/shared/ui/button/styles.scss
@@ -14,6 +14,12 @@
     height: 72px;
     width: 580px;
   }
+  &.small{
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 600;
+    height: 48px;
+  }
 
   &.medium {
     font-size: 16px;
