--- a/src/widgets/cards/ui/content/card/styles.scss
+++ b/src/widgets/cards/ui/content/card/styles.scss
@@ -6,7 +6,7 @@
     padding: 30px 20px;
     display: flex;
     justify-content: space-between;
-    border-radius: 8px;
+    border-radius: var(--border-radius);
     position: relative;
   }
   &__info {
@@ -17,7 +17,7 @@
     width: 66%;
   }
   &__image {
-    width: 34%;
+    border-radius: 12px;
   }
   &__title {
     display: flex;
