--- a/src/pages/atms-branches/ui/styles.scss
+++ b/src/pages/atms-branches/ui/styles.scss
@@ -10,13 +10,14 @@
     top: 24px;
     right: 0;
     bottom: 0;
-
+    display: flex;
+    justify-content: space-between;
     > div {
       height: calc(100% - 230px);
     }
 
     > div > div {
-      overflow-y: scroll;
+      // overflow-x: auto;
       height: 100%;
     }
 
