feat: AGEL-1044 добавлено Card, BankObject и getAddress и isOpen

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -30,6 +30,7 @@
   --bg-primary-input: #F3F4F8;
   --bg-secondary-input: #FEFEFE;
   --border-radius: 8px;
+  --card-border-radius: 16px;
 }
 
 body {
