--- a/src/shared/ui/text/styles.scss
+++ b/src/shared/ui/text/styles.scss
@@ -1,4 +1,5 @@
 .text {
+  display: flex;
   &.xxs {
     font-size: 12px;
     line-height: 14px;
@@ -67,6 +68,10 @@
 
   &.text-quadruple {
     color: var(--text-quadruple);
+  }
+
+  &.text-action {
+    color: var(--text-action);
   }
 
   &.text-inherit {
