--- a/src/shared/ui/text/styles.scss
+++ b/src/shared/ui/text/styles.scss
@@ -1,5 +1,4 @@
 .text {
-  display: flex;
   &.xxs {
     font-size: 12px;
     line-height: 14px;
@@ -76,5 +75,9 @@
 
   &.text-inherit {
     color: inherit;
+  }
+  
+  &.flex{
+    display: flex;
   }
 }
