feat: AGEL-1044 добавлено AsideMenu, BankObjectCard, BankObjectInfoMenu, getStatus, getSchedule

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,7 +3,7 @@
   --text-primary: #2B3E78;
   --text-secondary: #FEFEFE;
   --text-tertiary: #FEFEFE;
-  --text-quadruple: #3c5293;
+  --text-quadruple: #4b5b93;
   --text-primary-buttons: #3c5293;
   --text-secondary-buttons: #FEFEFE;
   --text-buttons-disable: #414650;
