--- a/src/shared/ui/preloader/styles.scss
+++ b/src/shared/ui/preloader/styles.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 100vh;
 
   &__img {
     width: 50px;
