feat: AGEL-1072 добавила эндпоинт getCardProductInfo в cardApi, добавила группы limits, conditions в mock-advantages, разделила UI компонента Advantages на эти группы, добавила interface CardInfo

--- a/src/pages/cards/ui/advantage/style.scss
+++ b/src/pages/cards/ui/advantage/style.scss
@@ -1,3 +1,9 @@
+.advantages {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 25px;
+  gap: 25px;
+}
 .advantage {
   width: calc((100% - 0px) / 4);
 }
