--- a/src/widgets/cards/ui/content/card/styles.scss
+++ b/src/widgets/cards/ui/content/card/styles.scss
@@ -18,6 +18,8 @@
   }
   &__image {
     border-radius: 12px;
+    align-self: baseline;
+    object-fit: contain;
   }
   &__title {
     display: flex;
