--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -64,7 +64,7 @@ body {
 #root{
   padding: 0;
   margin: 0;
-  height: 100vh;
+  height: calc(100vh + 230px);
   display: grid;
   grid-template-rows: auto 1fr auto;
 
