--- a/src/widgets/cards/ui/content/styles.scss
+++ b/src/widgets/cards/ui/content/styles.scss
@@ -1,8 +1,12 @@
 .filters {
   display: flex;
   justify-content: space-between;
+
+  > div:last-child {
+    justify-content: flex-end;
+  }
   @media screen and (max-width: 600px) {
     flex-direction: column;
-    gap: 10px;
+    gap: 16px;
   }
 }
