feat: AGEL-1071 сделала компонент Advantages общим для advantages, limits и conditions, вынесла limits и conditions за пределы контейнера карты, добавила preloader в CardPage, добавила валюту в значениях description в limits и conditions, добавила стили для CardPage и Advantages

--- a/src/widgets/cards/ui/content/card/styles.scss
+++ b/src/widgets/cards/ui/content/card/styles.scss
@@ -1,4 +1,7 @@
 .finance-card {
+  &__page {
+    padding-bottom: 50px;
+  }
   &__container {
     background-color: var(--bg-primary-input);
     margin-bottom: 25px;
