--- a/src/pages/cards/ui/advantage/style.scss
+++ b/src/pages/cards/ui/advantage/style.scss
@@ -3,6 +3,10 @@
   flex-wrap: wrap;
   margin-bottom: 25px;
   gap: 25px;
+  &__title {
+    margin-bottom: 20px;
+    margin-top: 30px;
+  }
 }
 .advantage {
   width: calc((100% - 0px) / 4);
