fix: AGEL-1119 import.meta.env

--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -46,6 +46,7 @@ input, textarea, button, select, input:-webkit-autofill {
   font-size: inherit;
   color: inherit;
   background-color: transparent;
+  opacity: 1;
 }
 
 input {
