--- a/src/widgets/toaster/styles.scss
+++ b/src/widgets/toaster/styles.scss
@@ -1,22 +1,31 @@
 .toaster {
-    display: flex;
-    justify-content: space-between;
-    gap: 12px;
-
-    &__icon {
+    padding: 12px!important;
+    border-radius: 12px!important;
+    min-width: 300px!important;
+    background: var(--bg-primary)!important;
+    color: var(--text-primary)!important;
+    box-shadow: 0 15px 20px 0 #0000000D!important;
+    display: block!important;
+    &-bar {
         display: flex;
+        justify-content: space-between;
         gap: 12px;
-        align-items: center;
 
-        &__text {
+        &__icon {
             display: flex;
-            flex-direction: column;
-            gap: 4px;
-        }
-    }
+            gap: 12px;
+            align-items: center;
 
-    button {
-        display: flex;
-        align-items: flex-start;
+            &__text {
+                display: flex;
+                flex-direction: column;
+                gap: 4px;
+            }
+        }
+
+        button {
+            display: flex;
+            align-items: flex-start;
+        }
     }
 }
