--- a/src/entities/accounts/account-card/styles.scss
+++ b/src/entities/accounts/account-card/styles.scss
@@ -1,6 +1,6 @@
 .account__card {
     padding: 16px;
-    border-radius: var(--border-radius);
+    border-radius: var(--medium-border-radius);
     background: var(--bg-quadruple);
 
     &__container {
