--- a/src/entities/filter/filter-bar/styles.scss
+++ b/src/entities/filter/filter-bar/styles.scss
@@ -4,7 +4,7 @@
     gap: 8px;
 
     &__button {
-        border-radius: var(--border-radius);
+        border-radius: var(--medium-border-radius);
         padding: 4px 16px;
         gap: 10px;
 
