--- a/src/entities/message/message-card/styles.scss
+++ b/src/entities/message/message-card/styles.scss
@@ -1,6 +1,6 @@
 .message-card {
   background: var(--bg-quadruple);
-  border-radius: 16px;
+  border-radius: var(--extra-large-border-radius);
   max-width: 580px;
   width: 100%;
   padding: 40px;
