--- a/src/shared/ui/button/styles.scss
+++ b/src/shared/ui/button/styles.scss
@@ -1,5 +1,5 @@
 .button {
-  border-radius: var(--border-radius);
+  border-radius: var(--medium-border-radius);
   padding: 12px 24px;
   max-width: 100%;
   display: flex;
