--- a/src/widgets/main-menu/ui/card/styles.scss
+++ b/src/widgets/main-menu/ui/card/styles.scss
@@ -1,5 +1,5 @@
 .main-menu__card {
-    border-radius: var(--border-radius);
+    border-radius: var(--medium-border-radius);
     background: var(--bg-quadruple);
     padding: 16px;
     display: flex;
