--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -30,8 +30,10 @@
   --bg-error: #F53C14;
   --bg-primary-input: #F3F4F8;
   --bg-secondary-input: #FEFEFE;
-  --border-radius: 8px;
-  --card-border-radius: 16px;
+  --small-border-radius: 4px;
+  --medium-border-radius: 8px;
+  --large-border-radius: 12px;
+  --extra-large-border-radius: 16px;
 }
 
 body {
@@ -42,23 +44,18 @@ body {
   background: var(--bg-primary);
 }
 
-::-webkit-scrollbar {
-  width: 10px;
+*::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
 }
 
-::-webkit-scrollbar-track {
-  background-color: var(--bg-primary);
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+*::-webkit-scrollbar-track {
+  background: none;
 }
 
-::-webkit-scrollbar-thumb {
-  background-color: var(--bg-quadruple);
-  cursor: pointer;
+*::-webkit-scrollbar-thumb {
+  background: rgba(43, 62, 120, 0.27);
   border-radius: 5px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: var(--bg-buttons-disable);
 }
 
 #root{
