--- a/src/entities/cards/card-card/styles.scss
+++ b/src/entities/cards/card-card/styles.scss
@@ -1,5 +1,5 @@
 .card-card {
-  border-radius: var(--border-radius);
+  border-radius: var(--medium-border-radius);
   background: var(--bg-quadruple);
   padding: 16px;
   display: flex;
@@ -23,7 +23,7 @@
     .card-card__preview {
       width: 50px;
       height: 30px;
-      border-radius: 4px;
+      border-radius: var(--small-border-radius);
       padding: 4px;
       color: var(--text-secondary);
       display: flex;
