--- a/src/features/drop-down/more-info/styles.scss
+++ b/src/features/drop-down/more-info/styles.scss
@@ -17,7 +17,7 @@
         right: 0;
         background-color: var(--bg-primary);
         padding: 16px;
-        border-radius: var(--border-radius);
+        border-radius: var(--medium-border-radius);
         min-width: 260px;
         display: flex;
         flex-direction: column;
