--- a/src/pages/account-creation/ui/styles.scss
+++ b/src/pages/account-creation/ui/styles.scss
@@ -1,6 +1,6 @@
 .create__account{
     &__container{
-            border-radius: var(--border-radius);
+            border-radius: var(--medium-border-radius);
             background: var(--bg-quadruple);  
             display: flex;
             gap: 24px;
@@ -28,7 +28,7 @@
     
 
     &__card{
-        border-radius: var(--border-radius);
+        border-radius: var(--medium-border-radius);
         background: var(--bg-primary);
         display: flex;
         flex-direction: column;
@@ -44,7 +44,7 @@
             gap: 4px;
         }
         &__currency{
-            border-radius: var(--border-radius);
+            border-radius: var(--medium-border-radius);
             background: var(--bg-primary);
             display: flex;
             align-items: center;
@@ -56,7 +56,7 @@
     &__result{
         padding: 5vh 10vw;
         align-self: center;
-        border-radius: var(--border-radius);
+        border-radius: var(--medium-border-radius);
         background: var(--bg-primary);
         display: flex;
         flex-direction: column;
