--- a/src/pages/atms-branches/ui/bank-object-info-menu/styles.scss
+++ b/src/pages/atms-branches/ui/bank-object-info-menu/styles.scss
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     gap: 8px;
-    border-radius: var(--border-radius);
+    border-radius: var(--medium-border-radius);
     border: solid 1px var(--text-action);
   }
 
