--- a/src/pages/contacts/ui/content/socials/styles.scss
+++ b/src/pages/contacts/ui/content/socials/styles.scss
@@ -8,7 +8,7 @@
             display: flex;
             align-items: center;
             gap: 20px;
-            border-radius: 16px;
+            border-radius: var(--extra-large-border-radius);
             background-color: var(--bg-quadruple);
             @media screen and (max-width: 500px)  {
                 min-width: unset;
