--- a/src/shared/ui/checkbox/styles.scss
+++ b/src/shared/ui/checkbox/styles.scss
@@ -13,7 +13,7 @@
   &__control {
     width: 20px;
     height: 20px;
-    border-radius: 4px;
+    border-radius: var(--small-border-radius);;
     margin-right: 10px;
     position: relative;
     border: solid 1px var(--text-quadruple);
