feat: AGEL-1115 добавлен компонент DetailsItem, рефактор Advantages, добавлен interface Detail, массивы infoItems, actionItems и advantagesItems с моковыми данными, вынесение часть UI из CardPage в CardInfo, добавлены стили для мобильной версии

--- a/src/pages/card-product/ui/advantage/style.scss
+++ b/src/pages/card-product/ui/advantage/style.scss
@@ -1,13 +1,22 @@
 .advantages {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 25px;
-  gap: 25px;
+  gap: 10px;
+  margin-bottom: 8px;
   &__title {
     margin-bottom: 20px;
     margin-top: 30px;
   }
+  &__container {
+    margin-top: 24px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
 }
 .advantage {
-  width: calc((100% - 0px) / 4);
+  width: calc((100% - 20px) / 3);
+  &__container {
+    display: flex;
+  }
 }
