--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -12,11 +12,13 @@
   --text-primary-input: #3c5293;
   --text-error: #F53C14;
   --text-success: #4CAF50;
+  --text-grey: #4D5F71;
   //фоны
   --bg-primary: #FEFEFE;
   --bg-secondary: #2B3E78;
   --bg-tertiary: #33457c;
   --bg-quadruple: #F3F4F8;
+  --bg-item-grey: #F6F7FA;
   --bg-primary-buttons: #FEFEFE;
   --bg-secondary-buttons: #2B3E78;
   --bg-buttons-disable: #babec5;
