--- a/src/shared/ui/text/styles.scss
+++ b/src/shared/ui/text/styles.scss
@@ -77,6 +77,18 @@
     color: var(--text-action);
   }
 
+  &.text-blue {
+    color: var(--text-very-dark-blue);
+  }
+
+  &.text-grey {
+    color: var(--text-grey);
+  }
+
+  &.text-white {
+    color: var(--text-secondary);
+  }
+
   &.text-inherit {
     color: inherit;
   }
