--- a/src/widgets/cards/ui/card-products/card/styles.scss
+++ b/src/widgets/cards/ui/card-products/card/styles.scss
@@ -16,17 +16,33 @@
     display: flex;
     flex-direction: column;
     margin-left: 60px;
-    gap: 10px;
+    gap: 5px;
     width: 66%;
   }
+  &__status {
+    padding: 0 12px;
+    border-radius: var(--large-border-radius);
+    width: max-content;
+    display: flex;
+    align-items: center;
+    height: 32px;
+    &-type {
+      &__ACTIVE{
+        background-color: var(--bg-success);
+      }
+      &__BLOCKED{
+        background-color: var(--bg-warning);
+      }
+    }
+  }
   &__image {
-    border-radius: var(--large-border-radius);;
-    align-self: baseline;
+    border-radius: var(--large-border-radius);
     object-fit: contain;
   }
   &__title {
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
   &__advantages {
     display: flex;
@@ -39,10 +55,13 @@
     margin-top: auto;
   }
 
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 810px) {
     &__container {
       flex-direction: column;
       align-items: center;
+    }
+    &__title {
+      justify-content: normal;
     }
     &__advantages {
       justify-content: space-between;
