--- a/src/entities/user/address/ui/styles.scss
+++ b/src/entities/user/address/ui/styles.scss
@@ -14,19 +14,20 @@
     flex-wrap: wrap;
     gap: 20px;
 
-    @media screen and (max-width: 1100px) {
-      > div {
-        flex: 1 1 50%!important;
-        max-width: 100%!important;
-      }
-    }
-
     > div {
       display: flex;
       flex-direction: column;
       gap: 8px;
-      flex: 1 1 33%;
-      max-width: calc((100% - 8px)/2);
+
+      @media screen and (max-width: 1100px) {
+        flex: 1 1 100%;
+        width: 100%;
+      }
+
+      @media screen and (min-width: 1100px) {
+        flex: 1 1 33%;
+        max-width: calc((100% - 8px)/2);
+      }
     }
   }
 }
