--- a/src/entities/user/contacts/ui/styles.scss
+++ b/src/entities/user/contacts/ui/styles.scss
@@ -8,16 +8,16 @@
     flex-wrap: wrap;
     gap: 20px;
 
-    @media screen and (max-width: 1100px) {
-      > div {
-        flex: 1 1 50%!important;
-      }
-    }
-
     > div {
       display: flex;
       flex-direction: column;
       gap: 8px;
+
+      @media screen and (max-width: 1100px) {
+        flex: 1 1 100%;
+        width: 100%;
+      }
+
       flex: 1 1 33%;
     }
   }
