--- a/src/shared/ui/radio/styles.scss
+++ b/src/shared/ui/radio/styles.scss
@@ -1,3 +1,31 @@
-input[type="radio"]:checked ~ label>div {
-  box-shadow: inset 0 0 0 1px var(--text-primary-input);
+.radio  {
+  & [type="radio"] {
+    display: none;
+    &:checked ~ label {
+      box-shadow: inset 0 0 0 1px var(--text-primary-input);
+    }
+    &:checked ~ label::before {
+      background: radial-gradient(var(--text-primary-input) 0%, var(--text-primary-input) 40%, transparent 50%, transparent);
+    }
+  }
+
+  label {
+    position: relative;
+    display: flex;
+    gap: 4px;
+    padding: 16px 24px;
+    background: var(--bg-primary);
+    border-radius: var(--medium-border-radius);
+
+    &:before {
+      content: "";
+      position: absolute;
+      border-radius: 50%;
+      height: 16px;
+      width: 16px;
+      right: 24px;
+      top: calc(50% - 8px);
+      box-shadow: inset 0 0 0 1px var(--text-primary-input);
+    }
+  }
 }
