feat: AGEL-1114 добавлена возможность просмотра имеющихся у клиента карт

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -12,6 +12,7 @@
   --text-primary-input: #3c5293;
   --text-error: #F53C14;
   --text-success: #4CAF50;
+  --text-light-gray: #757F8A;
   //фоны
   --bg-primary: #FEFEFE;
   --bg-secondary: #2B3E78;
