--- a/src/pages/card-product/ui/advantage/style.scss
+++ b/src/pages/card-product/ui/advantage/style.scss
@@ -18,5 +18,11 @@
   width: calc((100% - 20px) / 3);
   &__container {
     display: flex;
+    gap: 5px;
+  }
+  @media screen and (max-width: 810px) {
+    & {
+      width: calc((100% - 20px) / 2);
+    }
   }
 }
