--- a/src/entities/product/product-statuses/styles.scss
+++ b/src/entities/product/product-statuses/styles.scss
@@ -1,20 +1,19 @@
-.account {
-    &__statuses {
-        display: flex;
-        gap: 8px;
-        color: var(--text-secondary);
+.product-statuses {
+    display: flex;
+    gap: 8px;
+    color: var(--text-secondary);
 
-        &.row {
-            @media screen and (max-width: 500px)  {
-                flex-wrap: wrap;
-            }
+    &__row {
+        @media screen and (max-width: 500px)  {
+            flex-wrap: wrap;
         }
+        height: 32px;
+    }
 
-        &.column {
-            height: 56px;
-            flex-direction: column;
-            align-items: flex-end;
-        }
+    &__column {
+        height: 56px;
+        flex-direction: column;
+        align-items: flex-end;
     }
 
     &__status {
@@ -23,17 +22,17 @@
         width: max-content;
         display: flex;
         align-items: center;
-        &-type {
-            &__main {
+        &__type {
+            &-main {
                 background-color: var(--bg-action);
             }
-            &__active{
+            &-active{
                 background-color: var(--bg-success);
             }
-            &__closed{
+            &-closed{
                 background-color: var(--bg-warning);
             }
-            &__blocked{
+            &-blocked{
                 background-color: var(--bg-error);
             }
         }
