refactor: AGEL-1165 у карточных компонентов отдельные стили заменены на обертку Card

--- a/src/entities/accounts/account-card/styles.scss
+++ b/src/entities/accounts/account-card/styles.scss
@@ -1,18 +1,8 @@
 .account__card {
-    padding: 16px;
-    border-radius: var(--medium-border-radius);
-    background: var(--bg-quadruple);
-
-    &__container {
+    &__column {
         display: flex;
-        justify-content: space-between;
-        gap: 20px;
-
-        > div {
-            display: flex;
-            flex-direction: column;
-            gap: 16px;
-        }
+        flex-direction: column;
+        gap: 16px;
     }
 
     &__info {
