--- a/src/pages/contacts/ui/styles.scss
+++ b/src/pages/contacts/ui/styles.scss
@@ -1,8 +1,6 @@
-.bank-contacts{
+.bank-contacts {
     display: flex;
     flex-direction: column;
     gap: 24px;
-    max-width: 1280px;
-    margin: auto;
-    margin-bottom: 32px;
+    margin: auto auto 32px;
 }
