--- a/src/shared/ui/card/styles.scss
+++ b/src/shared/ui/card/styles.scss
@@ -2,6 +2,10 @@
   display: flex;
   height: 100%;
 
+  &.space-between {
+    justify-content: space-between;
+  }
+
   &.center {
     align-items: center;
   }
