refactor: AGEL-1165 исправлены Text colors

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,7 +4,7 @@
   --text-secondary: #FEFEFE;
   --text-tertiary: #FEFEFE;
   --text-quadruple: #4b5b93;
-  --text-very-dark-blue: #001A34;
+  --text-light: #5D6B98;
   --text-primary-buttons: #3c5293;
   --text-secondary-buttons: #FEFEFE;
   --text-buttons-disable: #414650;
@@ -12,8 +12,6 @@
   --text-primary-input: #3c5293;
   --text-error: #F53C14;
   --text-success: #4CAF50;
-  --text-grey: #4D5F71;
-  --text-light-gray: #757F8A;
   //фоны
   --bg-primary: #FEFEFE;
   --bg-secondary: #2B3E78;
